<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MobileApp2CA2</string>
    <string name="welcomeString">Welcome Homer</string>
    <string name="runningTitle">Name your track</string>
    <string name="donateButton">Running</string>
    <string name="runningDescription">Give a short description of the track</string>
    <string name="weatherClear">Clear</string>
    <string name="weatherSunny">Sunny</string>
    <string name="weatherCloudy">Cloudy</string>
    <string name="weatherRainy">Rainy</string>
    <string name="weatherTitle">Select Weather</string>
    <string name="difficultyTitle">Select Difficulty</string>
    <string name="amount">Amount</string>
    <string name="reportTitle">Donations Report</string>
    <string name="enter_difficulty">Enter Difficulty</string>
    <string name="action_track">Tracks</string>
    <string name="action_report">Report</string>
    <string name="action_location">Location</string>

    <string name="weatherDetail">Weather: </string>
    <string name="distanceDetail">Distance: </string>
    <string name="difficultyDetail">Difficulty: </string>

    <string name="start_track">Start Track</string>
    <string name="end_track">Finish Track</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">MobileApp2CA2 (Lab)</string>
    <string name="nav_header_subtitle">voteforhomer@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="aboutus_title">Homer for President !!</string>
    <string name="aboutus_message">Hi, I\'m Homer\n\nPlease vote for me.\n\n Please Please Please Please!!</string>

    <string name="tracksNotFound">No Tracks Yet…\nGo Run!</string>
    <string name="donationError">Error : Couldn\'t Make a Donation…</string>
    <string name="tracksDetails">Track Details</string>

    <string name="amt">Amount :</string>
    <string name="payment">Payment :</string>
    <string name="message">Message :</string>
    <string name="upvotes">UpVotes :</string>

    <string name="messageLoading">Please Wait while the Tracks are Loading...</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="default_web_client_id">851463586735-teddl0iimiqrusg1gb3pbtnp4a51ddvp.apps.googleusercontent.com</string>
    <string name="google_api_key">AIzaSyDpe9RYm-JnnjUSOEsD667M3z5qY2GQXa4</string>
    <string name="select_profile_image">Select Profile Image</string>

    <string name="change_theme">Change Theme</string>
    <string name="day_theme">Day Theme</string>
    <string name="night_theme">Night Theme</string>

    <string name="fav_icon">Favourite Icon</string>
    <string name="favourites">Favourites</string>
    <string name="start">Start</string>
    <string name="end">End</string>

</resources>